examples/invalid/07_qualified_variant_without_parens.lane
// invalid: qualified payloadless variant constructors require empty parentheses
module Examples.Invalid07

pub enum Option[A] {
  none()
  some(A)
}

pub let value : Option[Int] = Option::none
